Bug 360034 - Activity switcher not showing wallpapers from all activities
Summary: Activity switcher not showing wallpapers from all activities
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activity Switcher sidebar (other bugs)
Version First Reported In: 5.6.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-03 16:38 UTC by Robby Engelmann
Modified: 2016-09-20 14:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2016-03-03 16:38:06 UTC
see below

Reproducible: Always

Steps to Reproduce:
1.having several activities with different wallpapers
2.open activity switcher
3.

Actual Results:  
wallpapers of some activities are shown, but not for all

Expected Results:  
all wallpaper previews are shown

it is not specific for a specific activity or wallpaper image.
Comment 1 Ivan Čukić 2016-03-27 14:43:31 UTC
What types of wallpapers are you using. Ordinary images or not?
Comment 2 Robby Engelmann 2016-03-27 15:39:53 UTC
I am using ordinary images as backgrounds. Different ones for different activities. Some are shown in the activity previews of the switcher, some are not shown but only a gray background as preview.
Comment 3 Ivan Čukić 2016-03-27 16:43:11 UTC
Can you clear the cache just to make sure it is not causing the problems?

Open konsole, and write the following
kquitapp5 plasmashell
rm ~/.cache/activityswitcher_wallpaper_preview.kcache
plasmashell &>/dev/null&

This will stop plasma, remove the wallpaper cache file and restart plasmashell.
Comment 4 Robby Engelmann 2016-03-27 16:53:05 UTC
I did it...
..after restarting plasmashell the preview of another activity then before is gray now.
Comment 5 Ivan Čukić 2016-03-27 17:28:34 UTC
You mean that a preview of an activity disappeared and that it is grey now? Is it so for all activities or you still have some of them with previews?
Comment 6 Robby Engelmann 2016-03-27 17:35:16 UTC
I have three activities, 1 "work", 2 "private" and 3 "finances". Before I executed the konsole commands, previews of 1+3 showed the respective wallpapers and 2 was just gray (with a gradient). After the commands: 2+3 showed the respective wallpapers and 1 was just gray.
In the meantime, I restarted the notebook, and now 1 showed the respective wallpaper and 2+3 are just gray. So it randomly varies, which wallpapers are shown in the activity previews and which not.
Comment 7 Ivan Čukić 2016-03-27 17:48:40 UTC
Cool, thanks for the help, I'll see what went wrong with the patch.
Comment 8 Ivan Čukić 2016-09-20 14:22:10 UTC
Git commit 947f430e6059426904e7744b7d59179053d033bd by Ivan Čukić.
Committed on 20/09/2016 at 14:22.
Pushed by ivan into branch 'Plasma/5.8'.

Fixed loading of the wallpapers in the activity switcher

Summary:
- Created an asynchronous image provider to return wallpaper thumbnails
- Fixed the code that fetches the activity backgrounds from the config file
- Removed thumbnail cashing since we are relying on KIO now
- Removed the fun callback-based code from the QML/JavaScript side

Reviewers: #plasma, davidedmundson, mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2810

M  +6    -42   desktoppackage/contents/activitymanager/ActivityItem.qml
M  +2    -1    imports/activitymanager/CMakeLists.txt
M  +3    -3    imports/activitymanager/sortedactivitiesmodel.cpp
M  +86   -70   imports/activitymanager/switcherbackend.cpp
M  +1    -7    imports/activitymanager/switcherbackend.h

http://commits.kde.org/plasma-desktop/947f430e6059426904e7744b7d59179053d033bd