Fixed loading of the wallpapers in the activity switcher

Summary:
- Created an asynchronous image provider to return wallpaper thumbnails
- Fixed the code that fetches the activity backgrounds from the config file
- Removed thumbnail cashing since we are relying on KIO now
- Removed the fun callback-based code from the QML/JavaScript side

BUG:360034

Reviewers: #plasma, davidedmundson, mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2810